<resources>
    <string name="app_name">Blue</string>
    <string name="unknown_device">kkk</string>
    <string name="FirmwareVersion">FirmwareVersion:</string>
    <string name="sycndata">sycndata</string>
    <string name="sycntime">sycntime</string>
    <string name="battery">battery:</string>
    <string name="devicetime">devicetime:</string>
    <string name="errormsg">errormsg:</string>
    <string name="Connectstate">Connectstate:</string>
    <string name="startmeasure">startmeasure</string>
    <string name="stopmeasure">stopmeasure</string>
    <string name="totalsycndata">totalsycndata:</string>
    <string name="workmode">workmode:</string>
    <string name="workstate">workstate:</string>
    <string name="softwareversion">softwareversion:</string>
    <string name="temperatrue">temperatrue:</string>
    <string name="balancetemp">balancetemp:</string>
    <string name="Fetaleart">Fetalheart:</string>
    <string name="CuffPressure">CuffPressure:</string>
    <string name="Bloodxygenvalue">spo2:</string>
    <string name="heartrate">heartrate:</string>
    <string name="sys">sys:</string>
    <string name="dia">dia:</string>
    <string name="changeuser">changeuser</string>
    <string name="setVoice">setVoice</string>

</resources>
